--- a/src/uses.html
+++ b/src/uses.html
@@ -1,12 +1,13 @@
 ---
 layout: base.html
 title: Uses
-intro: Here's a list of software and hardware that I use every day, inspired by <a href="https://uses.tech/" target="_blank" rel="noreferrer">uses.tech</a>.
+intro: Here's a list of software and hardware that I use every day.
 ---
 
+<p>I hopped on the /uses bandwagon created by Wes Bos. Share yours at <a href="https://uses.tech/" target="_blank" rel="noreferrer">uses.tech</a>!</p>
 <div class="uses">
 	<section>
-		<h2 class="uses__title">Hardware</h2>
+		<h2>Hardware</h2>
 		<h3>Computer</h3>
 		<ul>
 			<li>Gigabyte GA-Z270 Gaming K3 Motherboard</li>
@@ -38,7 +39,7 @@ intro: Here's a list of software and hardware that I use every day, inspired by 
 	</section>
 
 	<section>
-		<h2 class="uses__title">Software</h2>
+		<h2>Software</h2>
 		<ul>
 			<li>Windows 10 Pro</li>
 			<li>Google Chrome</li>
