--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Roland Szabó | Roland Szabó &ndash; Frontend Designer</title>
+		<title>Roland Szabó Frontend Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+		<!-- Stylesheets -->
 		<link rel="stylesheet" href="/assets/css/style.css">
 		<link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css2?family=Blinker:wght@700&display=swap" rel="stylesheet">
 
+		<!-- Favicons -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
@@ -19,6 +21,13 @@
 		<meta name="msapplication-TileColor" content="#2b5797">
 		<meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
+
+		<!-- Open Graph -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://rolandszabo.design/">
+		<meta property="og:title" content="Roland Szabó Frontend Designer">
+		<meta property="og:description" content="Hi! I'm Roland, a multi-disciplinary web professional with 10 years of experience. Currently looking for freelance opportunities.">
+		<meta property="og:image" content="https://rolandszabo.design/assets/images/roland.png">
 
 		<!--[if IE]> <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script> <![endif]-->
 	</head>
