Created Contact page, reassigned footer menu

--- a/public/hire/index.html
+++ b/public/hire/index.html
@@ -185,7 +185,7 @@
 <section>
 	<h2 class="h1">Come Say Hi!</h2>
 	<p>I'm happy to talk to people. Feel free to drop me a line at:</p>
-	<a class="yuge" href="mailto:hi@rolandszabo.design">hi😃rolandszabo.design</a>
+	<a class="yuge" href="mailto:hi@rolandszabo.design" target="_blank" rel="noreferrer" title="Opens in a new browser tab">hi😃rolandszabo.design</a>
 </section>
 
 			</div>
@@ -194,12 +194,8 @@
 		<footer class="main-footer">
 	<div class="container">
 		<nav class="footer-nav">
-			<span class="footer-nav__title">Get it touch with me:</span>
-			<a class="footer-nav__link" href="mailto:hi@rolandszabo.design" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Email</a>
-			<a class="footer-nav__link" href="https://twitter.com/RSzaboDesign" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Twitter</a>
-			<a class="footer-nav__link" href="https://dribbble.com/Szaboka" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Dribbble</a>
-			<a class="footer-nav__link" href="https://github.com/RolandSzaboDesign" target="_blank" rel="noreferrer" title="Opens in a new browser tab">GitHub</a>
-			<a class="footer-nav__link" href="https://dev.to/szaboka" target="_blank" rel="noreferrer" title="Opens in a new browser tab">DEV</a>
+			<span class="footer-nav__title">More links on this site:</span>
+			<a class="footer-nav__link" href="/contact">Contact Me</a>
 		</nav>
 		<p class="copyright">&copy; 2020 Roland Szabó. All rights reserved.</p>
 		<p class="disclaimer">Hand-crafted in HTML & CSS. Generated with <a class="disclaimer__link" href="https://www.11ty.dev/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Eleventy</a>. Served by <a class="disclaimer__link" href="https://www.netlify.com/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Netlify</a>.</p>
