--- a/src/hire.html
+++ b/src/hire.html
@@ -119,5 +119,5 @@ intro: I design and develop websites to solve problems. I'm currently available.
 <section>
 	<h2 class="h1">Come Say Hi!</h2>
 	<p>I'm happy to talk to people. Feel free to drop me a line at:</p>
-	<a class="yuge" href="mailto:hi@rolandszabo.design">hi😃rolandszabo.design</a>
+	<a class="yuge" href="mailto:hi@rolandszabo.design" target="_blank" rel="noreferrer" title="Opens in a new browser tab">hi😃rolandszabo.design</a>
 </section>
