Removed unnecessary classes from Contact page

--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -82,12 +82,12 @@
 </ul>
 <h2>The Socials</h2>
 <p>If you want to stay up to date with what I'm doing, you can follow me on the following platforms.</p>
-<ul class="unstyled">
-	<li><a class="" href="https://dev.to/szaboka" target="_blank" rel="noreferrer" title="Opens in a new browser tab">DEV</a></li>
-	<li><a class="" href="https://twitter.com/RSzaboDesign" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Twitter</a></li>
-	<li><a class="" href="https://linkedin.com/in/szaboka" target="_blank" rel="noreferrer" title="Opens in a new browser tab">LinkedIn</a></li>
-	<li><a class="" href="https://dribbble.com/Szaboka" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Dribbble</a></li>
-	<li><a class="" href="https://github.com/RolandSzaboDesign" target="_blank" rel="noreferrer" title="Opens in a new browser tab">GitHub</a></li>
+<ul>
+	<li><a href="https://dev.to/szaboka" target="_blank" rel="noreferrer" title="Opens in a new browser tab">DEV</a></li>
+	<li><a href="https://twitter.com/RSzaboDesign" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Twitter</a></li>
+	<li><a href="https://linkedin.com/in/szaboka" target="_blank" rel="noreferrer" title="Opens in a new browser tab">LinkedIn</a></li>
+	<li><a href="https://dribbble.com/Szaboka" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Dribbble</a></li>
+	<li><a href="https://github.com/RolandSzaboDesign" target="_blank" rel="noreferrer" title="Opens in a new browser tab">GitHub</a></li>
 </ul>
 
 			</div>
