Added Bookmarks page

--- a/public/projects/index.html
+++ b/public/projects/index.html
@@ -122,6 +122,7 @@
 		<nav class="footer-nav">
 			<span class="footer-nav__title">More links on this site:</span>
 			<a class="footer-nav__link" href="/contact">Contact Me</a>
+			<a class="footer-nav__link" href="/bookmarks">Bookmarks</a>
 		</nav>
 		<p class="copyright">&copy; 2020 Roland Szabó. All rights reserved.</p>
 		<p class="disclaimer">Hand-crafted in HTML & CSS. Generated with <a class="disclaimer__link" href="https://www.11ty.dev/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Eleventy</a>. Served by <a class="disclaimer__link" href="https://www.netlify.com/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Netlify</a>.</p>
