Added trailing slash to links

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -41,19 +41,19 @@
 				<a class="site-nav__link site-nav__link--1 " href="/">Home</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--2 site-nav__link--active" href="/about">About</a>
+				<a class="site-nav__link site-nav__link--2 site-nav__link--active" href="/about/">About</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--3 " href="/projects">Projects</a>
+				<a class="site-nav__link site-nav__link--3 " href="/projects/">Projects</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--4 " href="/process">My Process</a>
+				<a class="site-nav__link site-nav__link--4 " href="/process/">My Process</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--5 " href="/uses">Uses</a>
+				<a class="site-nav__link site-nav__link--5 " href="/uses/">Uses</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--6 " href="/hire">Hire Me</a>
+				<a class="site-nav__link site-nav__link--6 " href="/hire/">Hire Me</a>
 			</li>
 		</ul>
 	</nav>
@@ -77,7 +77,7 @@
 	</div>
 	<p>Hey, I'm Roland. I'm 30 years old, currently living in Budapest, Hungary.</p>
 	<p>I created my first webpage in 2006 using a CMS called e107. There was one pre-made template I liked so much I would keep customizing it for different websites.</p>
-	<p>Today I'm a senior designer at <a href="https://proprivacy.com/" target="_blank" rel="noreferrer">ProPrivacy.com</a>, responsible for creating and maintaining the company website that serves hundreds of thousands of people worldwide.</p>
+	<p>Today I'm a senior designer at <a href="https://proprivacy.com" target="_blank" rel="noreferrer">ProPrivacy.com</a>, responsible for creating and maintaining the company website that serves hundreds of thousands of people worldwide.</p>
 	<p>The reason I love the web so much is that it continuously keeps me learning, as new technologies and methods keep popping up. There's never been a period in my career when I thought my job was boring. Nowadays I'm crazy about <strong>web performance</strong>, <strong>accessibility</strong>, and the <strong>JAMstack</strong>.</p>
 	<p>In my free time, I play computer- and board games, translate useful stuff to my native language, and read books on how to be a better person.</p>
 </section>
@@ -105,7 +105,7 @@
 	<aside class="read-more">
 		<h2 class="read-more__title">Uses</h2>
 		<p class="read-more__description">If you're interested in the software and hardware I use, I created a page to tell you just that!</p>
-		<a class="button read-more__button" href="/uses">Read</a>
+		<a class="button read-more__button" href="/uses/">Read</a>
 	</aside>
 </section>
 
@@ -142,7 +142,7 @@
 	<details class="faq">
 		<summary class="faq__question">Will you work for me full-time?</summary>
 		<div class="faq__answer">
-			<p><strong>No, I won't.</strong> I am currently in a full-time commitment with <a href="https://proprivacy.com/" target="_blank" rel="noreferrer">ProPrivacy.com</a>, and I have no intention of leaving anytime soon. However, if you're satisfied with my work, I can certainly continue working with you on any other projects you may have.</p>
+			<p><strong>No, I won't.</strong> I am currently in a full-time commitment with <a href="https://proprivacy.com" target="_blank" rel="noreferrer">ProPrivacy.com</a>, and I have no intention of leaving anytime soon. However, if you're satisfied with my work, I can certainly continue working with you on any other projects you may have.</p>
 		</div>
 	</details>
 </section>
@@ -154,8 +154,8 @@
 	<div class="container">
 		<nav class="footer-nav">
 			<span class="footer-nav__title">More links on this site:</span>
-			<a class="footer-nav__link" href="/contact">Contact Me</a>
-			<a class="footer-nav__link" href="/bookmarks">Bookmarks</a>
+			<a class="footer-nav__link" href="/contact/">Contact Me</a>
+			<a class="footer-nav__link" href="/bookmarks/">Bookmarks</a>
 		</nav>
 		<p class="copyright">&copy; 2020 Roland Szabó. All rights reserved.</p>
 		<p class="disclaimer">Hand-crafted in HTML & CSS. Generated with <a class="disclaimer__link" href="https://www.11ty.dev/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Eleventy</a>. Served by <a class="disclaimer__link" href="https://www.netlify.com/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Netlify</a>.</p>
