--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -41,19 +41,19 @@
 				<a class="site-nav__link site-nav__link--1 " href="/">Home</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--2 " href="/about">About</a>
+				<a class="site-nav__link site-nav__link--2 " href="/about/">About</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--3 " href="/projects">Projects</a>
+				<a class="site-nav__link site-nav__link--3 " href="/projects/">Projects</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--4 " href="/process">My Process</a>
+				<a class="site-nav__link site-nav__link--4 " href="/process/">My Process</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--5 " href="/uses">Uses</a>
+				<a class="site-nav__link site-nav__link--5 " href="/uses/">Uses</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--6 " href="/hire">Hire Me</a>
+				<a class="site-nav__link site-nav__link--6 " href="/hire/">Hire Me</a>
 			</li>
 		</ul>
 	</nav>
@@ -71,7 +71,7 @@
 				</header>
 				
 <h2>Good Old Email</h2>
-<p>If you're looking to contact me for working together, please read my <a href="/hire">Hire Me</a> page first. There's a bunch of very important things written there which will make working together a lot easier.</p>
+<p>If you're looking to contact me for working together, please read my <a href="/hire/">Hire Me</a> page first. There's a bunch of very important things written there which will make working together a lot easier.</p>
 <p>My email is <a href="mailto:hi@rolandszabo.design" target="_blank" rel="noreferrer" title="Opens in a new browser tab">hi😃rolandszabo.design</a>. I'll answer all emails I get promptly.</p>
 <h3>Definitely write that email if you:</h3>
 <ul>
@@ -97,8 +97,8 @@
 	<div class="container">
 		<nav class="footer-nav">
 			<span class="footer-nav__title">More links on this site:</span>
-			<a class="footer-nav__link" href="/contact">Contact Me</a>
-			<a class="footer-nav__link" href="/bookmarks">Bookmarks</a>
+			<a class="footer-nav__link" href="/contact/">Contact Me</a>
+			<a class="footer-nav__link" href="/bookmarks/">Bookmarks</a>
 		</nav>
 		<p class="copyright">&copy; 2020 Roland Szabó. All rights reserved.</p>
 		<p class="disclaimer">Hand-crafted in HTML & CSS. Generated with <a class="disclaimer__link" href="https://www.11ty.dev/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Eleventy</a>. Served by <a class="disclaimer__link" href="https://www.netlify.com/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Netlify</a>.</p>
