--- a/public/hire/index.html
+++ b/public/hire/index.html
@@ -41,19 +41,19 @@
 				<a class="site-nav__link site-nav__link--1 " href="/">Home</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--2 " href="/about">About</a>
+				<a class="site-nav__link site-nav__link--2 " href="/about/">About</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--3 " href="/projects">Projects</a>
+				<a class="site-nav__link site-nav__link--3 " href="/projects/">Projects</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--4 " href="/process">My Process</a>
+				<a class="site-nav__link site-nav__link--4 " href="/process/">My Process</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--5 " href="/uses">Uses</a>
+				<a class="site-nav__link site-nav__link--5 " href="/uses/">Uses</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--6 site-nav__link--active" href="/hire">Hire Me</a>
+				<a class="site-nav__link site-nav__link--6 site-nav__link--active" href="/hire/">Hire Me</a>
 			</li>
 		</ul>
 	</nav>
@@ -109,7 +109,7 @@
 	<aside class="read-more">
 		<h2 class="read-more__title">Design Process</h2>
 		<p class="read-more__description">If you're interested in how I work on the ideal project, check out my Design Process page.</p>
-		<a class="button read-more__button" href="/process">Read</a>
+		<a class="button read-more__button" href="/process/">Read</a>
 	</aside>
 	<p>As an all-rounder professional I perform the best when I am in charge of all things that are of my expertise. This means I prefer working solo on a project, but if you have other designers or developers on your team, and looking for a helping hand, I am happy to work as a member of a team.</p>
 	<p>I work <strong>remotely</strong> from my home office in Budapest. I have no problem working early mornings or late nights to overcome timezone differences.</p>
@@ -195,8 +195,8 @@
 	<div class="container">
 		<nav class="footer-nav">
 			<span class="footer-nav__title">More links on this site:</span>
-			<a class="footer-nav__link" href="/contact">Contact Me</a>
-			<a class="footer-nav__link" href="/bookmarks">Bookmarks</a>
+			<a class="footer-nav__link" href="/contact/">Contact Me</a>
+			<a class="footer-nav__link" href="/bookmarks/">Bookmarks</a>
 		</nav>
 		<p class="copyright">&copy; 2020 Roland Szabó. All rights reserved.</p>
 		<p class="disclaimer">Hand-crafted in HTML & CSS. Generated with <a class="disclaimer__link" href="https://www.11ty.dev/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Eleventy</a>. Served by <a class="disclaimer__link" href="https://www.netlify.com/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Netlify</a>.</p>
