--- a/public/index.html
+++ b/public/index.html
@@ -41,19 +41,19 @@
 				<a class="site-nav__link site-nav__link--1 site-nav__link--active" href="/">Home</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--2 " href="/about">About</a>
+				<a class="site-nav__link site-nav__link--2 " href="/about/">About</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--3 " href="/projects">Projects</a>
+				<a class="site-nav__link site-nav__link--3 " href="/projects/">Projects</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--4 " href="/process">My Process</a>
+				<a class="site-nav__link site-nav__link--4 " href="/process/">My Process</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--5 " href="/uses">Uses</a>
+				<a class="site-nav__link site-nav__link--5 " href="/uses/">Uses</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--6 " href="/hire">Hire Me</a>
+				<a class="site-nav__link site-nav__link--6 " href="/hire/">Hire Me</a>
 			</li>
 		</ul>
 	</nav>
@@ -73,8 +73,8 @@
 <p class="homepage-intro">Hi! I'm Roland, a multi-disciplinary web professional with 10 years of experience. Currently looking for freelance opportunities.</p>
 
 <p>Welcome to my website, it's great to have you here! Here's what you'll find here.</p>
-<p>You can get to know me and learn what I do exactly on my <a href="/about">About</a> page, or check out some of my favorite <a href="/projects">Projects</a> that I've worked on.</p>
-<p>If you're interested in working with me, I've compiled all the relevant information into my <a href="/hire">Hire Me</a> page. You should also learn about my <a href="/process">Design Process</a> while you're there.</p>
+<p>You can get to know me and learn what I do exactly on my <a href="/about/">About</a> page, or check out some of my favorite <a href="/projects/">Projects</a> that I've worked on.</p>
+<p>If you're interested in working with me, I've compiled all the relevant information into my <a href="/hire/">Hire Me</a> page. You should also learn about my <a href="/process/">Design Process</a> while you're there.</p>
 <p>I hope you'll like it here. Don't forget to say hi! 😃</p>
 
 			</div>
@@ -84,8 +84,8 @@
 	<div class="container">
 		<nav class="footer-nav">
 			<span class="footer-nav__title">More links on this site:</span>
-			<a class="footer-nav__link" href="/contact">Contact Me</a>
-			<a class="footer-nav__link" href="/bookmarks">Bookmarks</a>
+			<a class="footer-nav__link" href="/contact/">Contact Me</a>
+			<a class="footer-nav__link" href="/bookmarks/">Bookmarks</a>
 		</nav>
 		<p class="copyright">&copy; 2020 Roland Szabó. All rights reserved.</p>
 		<p class="disclaimer">Hand-crafted in HTML & CSS. Generated with <a class="disclaimer__link" href="https://www.11ty.dev/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Eleventy</a>. Served by <a class="disclaimer__link" href="https://www.netlify.com/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Netlify</a>.</p>
