--- a/public/projects/proprivacy/index.html
+++ b/public/projects/proprivacy/index.html
@@ -41,19 +41,19 @@
 				<a class="site-nav__link site-nav__link--1 " href="/">Home</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--2 " href="/about">About</a>
+				<a class="site-nav__link site-nav__link--2 " href="/about/">About</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--3 " href="/projects">Projects</a>
+				<a class="site-nav__link site-nav__link--3 " href="/projects/">Projects</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--4 " href="/process">My Process</a>
+				<a class="site-nav__link site-nav__link--4 " href="/process/">My Process</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--5 " href="/uses">Uses</a>
+				<a class="site-nav__link site-nav__link--5 " href="/uses/">Uses</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--6 " href="/hire">Hire Me</a>
+				<a class="site-nav__link site-nav__link--6 " href="/hire/">Hire Me</a>
 			</li>
 		</ul>
 	</nav>
@@ -101,7 +101,7 @@
 
 <section class="callout">
 	<h2 class="callout__title">Care About Privacy?</h2>
-	<a class="button" href="https://proprivacy.com/" target="_blank" rel="noreferrer">Visit ProPrivacy</a>
+	<a class="button" href="https://proprivacy.com" target="_blank" rel="noreferrer">Visit ProPrivacy</a>
 </section>
 
 			</div>
@@ -111,8 +111,8 @@
 	<div class="container">
 		<nav class="footer-nav">
 			<span class="footer-nav__title">More links on this site:</span>
-			<a class="footer-nav__link" href="/contact">Contact Me</a>
-			<a class="footer-nav__link" href="/bookmarks">Bookmarks</a>
+			<a class="footer-nav__link" href="/contact/">Contact Me</a>
+			<a class="footer-nav__link" href="/bookmarks/">Bookmarks</a>
 		</nav>
 		<p class="copyright">&copy; 2020 Roland Szabó. All rights reserved.</p>
 		<p class="disclaimer">Hand-crafted in HTML & CSS. Generated with <a class="disclaimer__link" href="https://www.11ty.dev/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Eleventy</a>. Served by <a class="disclaimer__link" href="https://www.netlify.com/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Netlify</a>.</p>
