--- a/src/contact.html
+++ b/src/contact.html
@@ -5,7 +5,7 @@ intro: Wanna say hi? Here's a bunch of options on how you can start a conversati
 ---
 
 <h2>Good Old Email</h2>
-<p>If you're looking to contact me for working together, please read my <a href="/hire">Hire Me</a> page first. There's a bunch of very important things written there which will make working together a lot easier.</p>
+<p>If you're looking to contact me for working together, please read my <a href="/hire/">Hire Me</a> page first. There's a bunch of very important things written there which will make working together a lot easier.</p>
 <p>My email is <a href="mailto:hi@rolandszabo.design" target="_blank" rel="noreferrer" title="Opens in a new browser tab">hi😃rolandszabo.design</a>. I'll answer all emails I get promptly.</p>
 <h3>Definitely write that email if you:</h3>
 <ul>
