--- a/src/hire.html
+++ b/src/hire.html
@@ -43,7 +43,7 @@ intro: I design and develop websites to solve problems. I'm currently available.
 	<aside class="read-more">
 		<h2 class="read-more__title">Design Process</h2>
 		<p class="read-more__description">If you're interested in how I work on the ideal project, check out my Design Process page.</p>
-		<a class="button read-more__button" href="/process">Read</a>
+		<a class="button read-more__button" href="/process/">Read</a>
 	</aside>
 	<p>As an all-rounder professional I perform the best when I am in charge of all things that are of my expertise. This means I prefer working solo on a project, but if you have other designers or developers on your team, and looking for a helping hand, I am happy to work as a member of a team.</p>
 	<p>I work <strong>remotely</strong> from my home office in Budapest. I have no problem working early mornings or late nights to overcome timezone differences.</p>
