--- a/src/process.html
+++ b/src/process.html
@@ -46,5 +46,5 @@ intro: This is how the creative process of the ideal start-to-finish website pro
 <section class="callout">
 	<h2 class="callout__title">Ready to Jump In?</h2>
 	<p class="callout__description">Drop me a line so we can discuss how I can help you.</p>
-	<a class="button" href="/hire">Hire Me</a>
+	<a class="button" href="/hire/">Hire Me</a>
 </section>
