--- a/src/projects/proprivacy.html
+++ b/src/projects/proprivacy.html
@@ -37,5 +37,5 @@ screenshot_url: /assets/images/projects/proprivacy-01.png
 
 <section class="callout">
 	<h2 class="callout__title">Care About Privacy?</h2>
-	<a class="button" href="https://proprivacy.com/" target="_blank" rel="noreferrer">Visit ProPrivacy</a>
+	<a class="button" href="https://proprivacy.com" target="_blank" rel="noreferrer">Visit ProPrivacy</a>
 </section>
