--- a/src/about.html
+++ b/src/about.html
@@ -11,7 +11,7 @@ intro: I'm one of those lucky few who turned their hobby into a day job. Welcome
 	</div>
 	<p>Hey, I'm Roland. I'm 30 years old, currently living in Budapest, Hungary.</p>
 	<p>I created my first webpage in 2006 using a CMS called e107. There was one pre-made template I liked so much I would keep customizing it for different websites.</p>
-	<p>Today I'm a senior designer at <a href="https://proprivacy.com/" target="_blank" rel="noreferrer">ProPrivacy.com</a>, responsible for creating and maintaining the company website that serves hundreds of thousands of people worldwide.</p>
+	<p>Today I'm a senior designer at <a href="https://proprivacy.com" target="_blank" rel="noreferrer">ProPrivacy.com</a>, responsible for creating and maintaining the company website that serves hundreds of thousands of people worldwide.</p>
 	<p>The reason I love the web so much is that it continuously keeps me learning, as new technologies and methods keep popping up. There's never been a period in my career when I thought my job was boring. Nowadays I'm crazy about <strong>web performance</strong>, <strong>accessibility</strong>, and the <strong>JAMstack</strong>.</p>
 	<p>In my free time, I play computer- and board games, translate useful stuff to my native language, and read books on how to be a better person.</p>
 </section>
@@ -39,7 +39,7 @@ intro: I'm one of those lucky few who turned their hobby into a day job. Welcome
 	<aside class="read-more">
 		<h2 class="read-more__title">Uses</h2>
 		<p class="read-more__description">If you're interested in the software and hardware I use, I created a page to tell you just that!</p>
-		<a class="button read-more__button" href="/uses">Read</a>
+		<a class="button read-more__button" href="/uses/">Read</a>
 	</aside>
 </section>
 
@@ -76,7 +76,7 @@ intro: I'm one of those lucky few who turned their hobby into a day job. Welcome
 	<details class="faq">
 		<summary class="faq__question">Will you work for me full-time?</summary>
 		<div class="faq__answer">
-			<p><strong>No, I won't.</strong> I am currently in a full-time commitment with <a href="https://proprivacy.com/" target="_blank" rel="noreferrer">ProPrivacy.com</a>, and I have no intention of leaving anytime soon. However, if you're satisfied with my work, I can certainly continue working with you on any other projects you may have.</p>
+			<p><strong>No, I won't.</strong> I am currently in a full-time commitment with <a href="https://proprivacy.com" target="_blank" rel="noreferrer">ProPrivacy.com</a>, and I have no intention of leaving anytime soon. However, if you're satisfied with my work, I can certainly continue working with you on any other projects you may have.</p>
 		</div>
 	</details>
 </section>
