--- a/public/projects/ananas/index.html
+++ b/public/projects/ananas/index.html
@@ -50,7 +50,7 @@
 				<a class="site-nav__link site-nav__link--4 " href="/process/">My Process</a>
 			</li>
 			<li class="site-nav__item">
-				<a class="site-nav__link site-nav__link--5 " href="/uses/">Uses</a>
+				<a class="site-nav__link site-nav__link--5 " href="/bookmarks/">Bookmarks</a>
 			</li>
 			<li class="site-nav__item">
 				<a class="site-nav__link site-nav__link--6 " href="/hire/">Hire Me</a>
@@ -100,7 +100,7 @@
 		<nav class="footer-nav">
 			<span class="footer-nav__title">More links on this site:</span>
 			<a class="footer-nav__link" href="/contact/">Contact Me</a>
-			<a class="footer-nav__link" href="/bookmarks/">Bookmarks</a>
+			<a class="footer-nav__link" href="/uses/">Uses</a>
 		</nav>
 		<p class="copyright">&copy; 2020 Roland Szabó. All rights reserved.</p>
 		<p class="disclaimer">Hand-crafted in HTML & CSS. Generated with <a class="disclaimer__link" href="https://www.11ty.dev/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Eleventy</a>. Served by <a class="disclaimer__link" href="https://www.netlify.com/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Netlify</a>.</p>
