Back to Top added + Logo resized

--- a/public/process/index.html
+++ b/public/process/index.html
@@ -120,6 +120,7 @@
 
 		<footer class="main-footer">
 	<div class="container">
+		<a class="back-to-top" href="#">Back to Top</a>
 		<nav class="footer-nav">
 			<span class="footer-nav__title">More links on this site:</span>
 			<a class="footer-nav__link" href="/contact/">Contact Me</a>
