--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -27,7 +27,7 @@ intro: This is a hand-curated list of some of my favorite websites, articles and
 		- Get the current accessibility support status of HTML5 features across major browsers.
 	</li>
 	<li>
-		<strong><a href="" target="_blank" rel="noreferrer" title="Opens in a new browser tab">We're Just Temporarily Abled</a></strong>
+		<strong><a href="https://uxmag.com/articles/we-re-just-temporarily-abled" target="_blank" rel="noreferrer" title="Opens in a new browser tab">We're Just Temporarily Abled</a></strong>
 		- An eye-opening article on designing for our future selves.
 	</li>
 </ul>
@@ -141,7 +141,7 @@ intro: This is a hand-curated list of some of my favorite websites, articles and
 		- A beautiful, animated typographic cheat sheet.
 	</li>
 	<li>
-		<strong><a href="" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Modular Scale</a></strong>
+		<strong><a href="https://www.modularscale.com/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Modular Scale</a></strong>
 		- A tool to help web designers size their type in a more meaningful way.
 	</li>
 	<li>
