Added Error 404 Page

--- a/public/hire/index.html
+++ b/public/hire/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Let's Work Together! | Roland Szabó &ndash; Frontend Designer</title>
+		<title>Let's Work Together! | Roland Szabó Frontend Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -60,7 +60,7 @@
 </header>
 
 
-		<main data-title="Let's Work Together!">
+		<main data-title="Hire Me">
 			<div class="container">
 				<header class="page-header">
 					<h1 class="page-header__title">Let's Work Together!</h1>
