--- a/src/hire.html
+++ b/src/hire.html
@@ -1,6 +1,7 @@
 ---
 layout: base.html
 title: Let's Work Together!
+bg: Hire Me
 intro: I design and develop websites to solve problems. I'm currently available. How can I help you?
 ---
 
