--- a/public/projects/lotrem-ipsum/index.html
+++ b/public/projects/lotrem-ipsum/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>LOTRem Ipsum | Roland Szabó &ndash; Frontend Designer</title>
+		<title>LOTRem Ipsum | Roland Szabó Frontend Designer</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
