Added Error 404 Page

--- a/public/404.html
+++ b/public/404.html
@@ -24,7 +24,7 @@
 
 		<!-- Open Graph -->
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://rolandszabo.design/404/">
+		<meta property="og:url" content="https://rolandszabo.design/404.html">
 		<meta property="og:title" content="Error 404 | Roland Szabó, Frontend Designer">
 		<meta property="og:description" content="">
 		<meta property="og:image" content="https://rolandszabo.design/assets/images/roland.png">
