--- a/src/404.html
+++ b/src/404.html
@@ -3,6 +3,7 @@ layout: base.html
 title: Error 404
 bg: :(
 tagline: This page doesn't exist.
+permalink: 404.html
 ---
 
 <p>You should check the URL for an obvious typo or go to my <a href="/">homepage</a> and start over. If you think this page really should be here, please <a href="mailto:hi@rolandszabo.design" target="_blank" rel="noreferrer" title="Opens in a new browser tab">let me know about it</a>. Thanks!</p>
