--- a/public/bookmarks/index.html
+++ b/public/bookmarks/index.html
@@ -99,7 +99,12 @@
 </ul>
 
 <h2>Coding</h2>
-
+<ul>
+	<li>
+		<strong><a href="https://thisthat.dev/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">What is the difference between this & that</a></strong>
+		- in Frontend Development?
+	</li>
+</ul>
 <h3>Coding &ndash; HTML</h3>
 <ul>
 	<li>
