--- a/src/bookmarks.html
+++ b/src/bookmarks.html
@@ -33,7 +33,12 @@ intro: This is a hand-curated list of some of my favorite websites, articles and
 </ul>
 
 <h2>Coding</h2>
-
+<ul>
+	<li>
+		<strong><a href="https://thisthat.dev/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">What is the difference between this & that</a></strong>
+		- in Frontend Development?
+	</li>
+</ul>
 <h3>Coding &ndash; HTML</h3>
 <ul>
 	<li>
