--- a/public/bookmarks/index.html
+++ b/public/bookmarks/index.html
@@ -251,6 +251,10 @@
 		<strong><a href="https://www.photopea.com/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Photopea</a></strong>
 		- A free online image editor that looks and works like Adobe Photoshop.
 	</li>
+	<li>
+		<strong><a href="https://ballpoint.io/" target="_blank" rel="noreferrer" title="Opens in a new browser tab">Ballpoint.io</a></strong>
+		- A free online vector graphics editor that looks and works similar to Adobe Illustrator.
+	</li>
 </ul>
 
 <h2>Uncategorized</h2>
