Updated basic information

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -75,11 +75,11 @@
 	<div class="indented-image">
 		<img src="/assets/images/roland.jpg" alt="Photo of Roland Szabó" title="Hey, it's the real me! 🤓">
 	</div>
-	<p>Hey, I'm Roland. I'm 30 years old, currently living in Budapest, Hungary.</p>
+	<p>Hey, I'm Roland. I'm 31 years old, currently living in Budapest, Hungary.</p>
 	<p>I created my first webpage in 2006 using a CMS called e107. There was one pre-made template I liked so much I would keep customizing it for different websites.</p>
-	<p>Today I'm a senior designer at <a href="https://proprivacy.com" target="_blank" rel="noreferrer">ProPrivacy.com</a>, responsible for creating and maintaining the company website that serves hundreds of thousands of people worldwide.</p>
+	<p>Today, I'm a senior designer of <a href="https://retalk.com" target="_blank" rel="noreferrer">Retalk.com</a>, responsible for creating and maintaining the website that serves over a hundred-thousand people worldwide.</p>
 	<p>The reason I love the web so much is that it continuously keeps me learning, as new technologies and methods keep popping up. There's never been a period in my career when I thought my job was boring. Nowadays I'm crazy about <strong>web performance</strong>, <strong>accessibility</strong>, and the <strong>JAMstack</strong>.</p>
-	<p>In my free time, I play computer- and board games, translate useful stuff to my native language, and read books on how to be a better person.</p>
+	<p>In my free time, I play computer- and board games, <a href="https://rolandszabo.photo" target="_blank" rel="noopener noreferrer">take loads of photos</a> with my camera, translate useful stuff to my native language, and read books on how to be a better person.</p>
 </section>
 
 <section>
@@ -139,7 +139,7 @@
 	</details>
 	<details class="faq">
 		<summary class="faq__question">Will you work for me full-time?</summary>
-		<p><strong>No, I won't.</strong> I am currently in a full-time commitment with <a href="https://proprivacy.com" target="_blank" rel="noreferrer">ProPrivacy.com</a>, and I have no intention of leaving anytime soon. However, if you're satisfied with my work, I can certainly continue working with you on any other projects you may have.</p>
+		<p><strong>No, I won't.</strong> I am currently in a full-time commitment with <a href="https://retalk.com" target="_blank" rel="noreferrer">Retalk.com</a>, and I have no intention of leaving anytime soon. However, if you're satisfied with my work, I can certainly continue working with you on any other projects you may have.</p>
 	</details>
 </section>
 
